<?xml version="1.0"?>
<package format="2">
  <name>gym_franka_server</name>
  <version>0.0.1</version>
  <description>Server node for Franka gym environment</description>
  <license>MIT</license>

  <url type="website">https://github.com/PhilipZRH/gym-franka-server</url>

  <author email="ruihan.zhao@utexas.edu">Ruihan Zhao</author>
  <maintainer email="ruihan.zhao@utexas.edu">Ruihan Zhao</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/gym_franka_controllers_plugin.xml" />
  </export>

</package>
